@@ -244,6 +244,7 @@ tiberium-growth=Tiberium Patch Richness
 tiberium-spread=Tiberium Patch Size
 tiberium-value=Tiberium Recipe Value
 tiberium-damage=Tiberium Damage
+tiberium-blue-target-evo=Blue Tiberium Appearance Timing
 tiberium-blue-saturation-point=Blue Tiberium Saturation Percent
 tiberium-blue-saturation-slowdown=Blue Tiberium Post-Saturation Growth Rate
 tiberium-starting-area=Tiberium in Starting Area
@@ -270,6 +271,7 @@ tiberium-byproduct-direct=Whether direct recipes produce Tiberium Sludge waste.\
 tiberium-damage=Scale the damage that Tiberium will do to structures when it grows, players standing on it, or players holding it in their inventory. Save game must be reloaded after changing.\nDefault: 10
 tiberium-radius=Distance from nodes that Tiberium can be placed. Save game must be reloaded after changing.\nDefault: 30
 tiberium-growth=Scales the amount of Tiberium ore that can grow on a tile. Save game must be reloaded after changing.\nDefault: 10
+tiberium-blue-target-evo=Around what evolution factor you expect Blue Tiberium to start spawning in the wild\nDefault: 0.6
 tiberium-blue-saturation-point=What percent of Green Tiberium transformed to Blue Tiberium is considered fully saturated.\nDefault: 50%
 tiberium-blue-saturation-slowdown=How fast Green Tiberium should be transformed to Blue Tiberium after the planet is fully saturated with Blue Tiberium.\nDefault: 10%
 tiberium-debug-text=Activates useful and annoying debugging messages both in-game and as part of the startup process. Logs additional information to factorio-current.log file for troubleshooting.\nDefault: disabled
